Fixed double border and spacing using negative margin. Now using a explicit spacing variable instead of messing with margins.

--- a/src/less/theme/components/menubar/menubar.less
+++ b/src/less/theme/components/menubar/menubar.less
@@ -5,7 +5,7 @@
 @menubar-background: url("data:image/svg+xml;charset=utf8,%3Csvg height='@{_menubar-height}' viewBox='0 0 40 @{_menubar-height}' width='40' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='0' y='@{_menubar-divider-height}' width='100' height='1' fill='@{_menubar-border-color}'/%3E%3C/svg%3E") 0 0 @menubar-background-color;
 @menubar-background-color: @background-color;
 @menubar-border-color: darken(@menubar-background-color, 20);
-@menubar-margin: 0;
+@menubar-spacing: 0;
 @menubar-padding: 0 @toolbar-group-padding-x;
 
 // private variables
@@ -16,11 +16,13 @@
 .tox {
   .tox-menubar {
     background: @menubar-background;
-    border: 1px solid @menubar-border-color;
+    border-color: @menubar-border-color;
+    border-style: solid;
+    border-width: 1px 1px 0 1px;
     display: flex;
     flex-shrink: 0;
     flex-wrap: wrap;
-    margin: @menubar-margin;
+    margin: 0 0 (@menubar-spacing - 1px) 0;
     padding: @menubar-padding;
   }
 }
