--- a/src/less/theme/components/statusbar/statusbar.less
+++ b/src/less/theme/components/statusbar/statusbar.less
@@ -16,6 +16,7 @@
     flex-shrink: 0;
     font-size: @font-size-xs;
     height: @statusbar-height;
+    margin-top: -1px;
     padding: 0 @statusbar-padding-x;
     position: relative;
     text-transform: uppercase;
