--- a/src/less/theme/components/toolbar/toolbar.less
+++ b/src/less/theme/components/toolbar/toolbar.less
@@ -5,8 +5,8 @@
 @toolbar-background-color: @background-color;
 @toolbar-background: url("data:image/svg+xml;charset=utf8,%3Csvg height='@{_toolbar-height}' viewBox='0 0 40 @{_toolbar-height}' width='40' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='0' y='@{_toolbar-divider-height}' width='100' height='1' fill='@{_toolbar-border-color}'/%3E%3C/svg%3E") 0 0 @toolbar-background-color;
 @toolbar-border-color: darken(@toolbar-background-color, 20);
-@toolbar-margin: 0;
 @toolbar-padding: 0;
+@toolbar-spacing: 0;
 
 // private variables
 @_toolbar-border-color: escape('@{toolbar-border-color}');
@@ -21,7 +21,7 @@
     display: flex;
     flex-shrink: 0;
     flex-wrap: wrap;
-    margin: @toolbar-margin;
+    margin: 0 0 (@toolbar-spacing - 1px) 0;
     padding: @toolbar-padding;
   }
 
